--- a/css/style.css
+++ b/css/style.css
@@ -1,48 +1,50 @@
 /* soft reset do css */
-*{
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
-body{
+body {
   background-color: #3065AC;
+  /* background-color: rgb(1, 1, 65); */
   background-size: auto 100vh;
   color: whitesmoke;
   font-family: 'Montserrat Alternates', sans-serif;
-  height: 100vh;
-  font-size: 12px;
+  /* height: 100vh;
+  font-size: 12px; */
 }
 
 /* se a tela tiver pelo menos 400px vai carregar esses estilos */
-@media(min-width: 400px){
-  body{
+@media (min-width: 400px) {
+  body {
     font-size: 14px;
   }
 }
 
 /* breakpoint */
-@media(min-width: 600px){
-  body{
+@media (min-width: 600px) {
+  body {
+    background-attachment: fixed;
+    background-size: cover;
     font-size: 18px;
   }
 }
 
 /* breakpoint */
-@media(min-width: 600px){
-  body{
-    font-size: 18px;
+@media (min-width: 1200px) {
+  body {
+    font-size: 20px;
   }
 }
 
-header{
-  height: 100vh;
+header {
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-.menu{
+.menu {
   background-color: white;
   position: fixed;
   width: 100vw;
@@ -50,40 +52,40 @@ header{
   z-index: 1;
 }
 
-.menu ul{
+.menu ul {
   display: flex;
   justify-content: space-around;
 }
 
-.menu li{
+.menu li {
   list-style: none;
 }
 
-.menu a{
+.menu a {
   display: block;
   padding: 10px 20px;
   transition: background-color 1s, color 1s;
 }
 
 .menu a:active,
-.menu a:hover{
+.menu a:hover {
   background-color: #3065AC;
   color: white;
 }
 
-a{
+a {
   color: #3065AC;
   text-decoration: none;
 }
 
-.titulo{
+/* .titulo{
   transform: scale(0.2) translateY(50vh);
   opacity: 0;
 
   animation: 1s linear 2s animacaoTitulo forwards;
-}
+} */
 
-@keyframes animacaoTitulo{
+/* @keyframes animacaoTitulo{
   from{
     transform: scale(0.2) translateY(50vh);
     opacity: 0;
@@ -92,73 +94,159 @@ a{
     transform: scale(1) translateY(0);
     opacity: 1;
   }
+} */
+
+.banner{
+  /* background-image: url("https://www.osmais.com/wallpapers/201206/natureza-magnifica-wallpaper.jpg"); */
+  background-image: url(../img/raquelcalazans.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  color: whitesmoke;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  height: 100vh;
+}
+.banner .titulo{
+  padding-right: 150px;
 }
 
 .site-subtitle,
-.site-title{
+.site-title {
   color: whitesmoke;
   text-align: center;
 }
 
-.site-title{
+.site-title {
   font-size: 3em;
   font-family: 'Charmonman', cursive;
 }
 
-.site-subtitle{
+.site-subtitle {
   font-style: italic;
 }
 
+.sobre,
 .contato,
-.portfolio{
+.portfolio {
   padding: 2em;
   min-height: 100vh;
 }
 
+@media (min-width: 1200px) {
+  .container {
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 1200px;
+  }
+}
+
+.sobre h2,
 .contato h2,
-.portfolio h2{
+.portfolio h2 {
   color: whitesmoke;
   margin-bottom: 1.5em;
   font-size: 2em;
+  padding-top: 50px;
 }
 
-.portfolio .grid{
+.sobre p {
+  margin-bottom: 1em;
+  text-align: justify;
+}
+
+.sobre a {
+  color: white;
+  text-decoration: underline;
+}
+
+.sobre .avatar {
+  float: right;
+  margin-left: 2em;
+  margin-bottom: 1em;
+  
+}
+
+.sobre .avatar img {
+  height: 250px;
+  width: auto;
+}
+
+.portfolio .grid {
   display: grid;
   gap: 2em;
 }
 
-@media(min-width: 700px){
-  .portfolio .grid{
+@media (min-width: 700px) {
+  .portfolio .grid {
     grid-template-columns: repeat(2, 350px);
-    justify-content: center;
+    /* justify-content: center; */
   }
 }
 
-@media(min-width: 1000px){
-  .portfolio .grid{
+@media (min-width: 1000px) {
+  .portfolio .grid {
     grid-template-columns: repeat(3, 350px);
-    justify-content: center;
     align-content: center;
-    height: calc(100vh - 4em - 48px - 1.5em);
+    justify-content: center;
+    height: calc(100vh - 5.5em - 48px);
   }
 }
 
-.portfolio figure{
+.flip-card {
+  height: 180px;
+  perspective: 1000px;
+  padding-bottom: 215px;
+}
+
+.flip-card:hover .card {
+  transform: rotateY(180deg);
+}
+
+.card {
+  position: relative;
+  /* color: black; */
+  transform-style: preserve-3d;
+  transition: transform 3s;
+}
+
+.card-front,
+.card-back {
+  backface-visibility: hidden;
+  left: 0;
+  position: absolute;
+  top: 0;
+  width: 100%;
+}
+
+.card-back {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: white;
+  color: black;
+  height: 180px;
+  padding: 20px;
+  width: 100%;
+  transform: rotateY(180deg);
+}
+
+.portfolio figure {
   text-align: center;
 }
 
-.img-portfolio{
+.img-portfolio {
   height: 180px;
-  width: 240px;
+  width: 100%;
   object-fit: cover;
   /* object-position: left bottom; */
-  transform: scale(1);
+  /* transform: scale(1); */
   transition: transform 500ms;
 }
 
-.img-portfolio:hover{
+/* .img-portfolio:hover{
   transform: scale(1.3);
-}
+} */
 
 /* @media(min-width: 1200px){
   .img-portfolio{
@@ -166,18 +254,34 @@ a{
     width: auto;
   }
 } */
-.contato .icons{
-  text-align: center;
+
+.footer{
+  margin: 5% 15%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
-.contato a{
+.contato .icons {
+  text-align: center;
+  padding-top: 200px;
+}
+
+.contato a {
   color: whitesmoke;
   font-size: 5em;
   transition: text-shadow 1s;
+  padding-left: 50px;
 }
 
 .contato a:active,
-.contato a:hover{
+.contato a:hover {
   text-decoration: none;
-  text-shadow: 0px 0px 50px rgba(255, 255, 255, 0.8);
+  text-shadow: 0px 0px 20px rgba(255, 255, 255, 0.5);
+}
+
+.copyright {
+  text-align: center;
+  padding-top: 200px;
 }
